fixed problems of concurrent modification