@@ -1,26 +1,34 @@
 package blockchain.model;
 
 import java.util.ArrayList;
+import java.util.Deque;
+import java.util.Iterator;
 import java.util.List;
+import java.util.UUID;
+import java.util.concurrent.ConcurrentLinkedDeque;
 
 import org.apache.commons.codec.digest.DigestUtils;
 
 public class BlockChain {
 	public final static String POW_PREFIX = "00000";
 
-	private int length;
-	private List<Block> chain;
+	private final String id = UUID.randomUUID().toString();
+	private final Deque<Block> chain;
 	
 	public BlockChain() {
-		this.chain = new ArrayList<>();
+		this.chain = new ConcurrentLinkedDeque<>();
 	}
-	
+
 	public BlockChain(List<Block> chain) {
-		this.chain = new ArrayList<>(chain);
+		this.chain = new ConcurrentLinkedDeque<>(chain);
 	}
 	
-	public void add(Block block) {
+	public boolean add(Block block, String id) {
+		if (! this.id.equals(id)) {
+			return false;
+		}
 		this.chain.add(block);
+		return true;
 	}
 
 	public List<Block> getChain() {
@@ -28,11 +36,15 @@ public class BlockChain {
 	}
 
 	public int length() {
-		return length;
+		return this.chain.size();
+	}
+	
+	public String id() {
+		return this.id;
 	}
 
 	public Block lastBlock() {
-		return chain.get(chain.size() - 1);
+		return chain.getLast();
 	}
 	
 	public int proofOfWork() {
@@ -53,17 +65,25 @@ public class BlockChain {
 	}
 
 	public boolean isValid() {
-		if (chain.isEmpty()) return false;
-		for (int i=1; i<chain.size(); i++) {
-			Block last = chain.get(i-1);
-			Block curr = chain.get(i);
+		if (chain.isEmpty()) {
+			return false;
+		}
+		Iterator<Block> iter = chain.iterator();
+		Block last = iter.next();
+		while (iter.hasNext()) {
+			Block curr = iter.next();
 			if (! last.hash().equals(curr.getPreviousHash())) {
 				return false;
 			}
 			if (! isValid(last.getProof(), curr.getProof())) {
 				return false;
 			}
+			last = curr;
 		}
 		return true;
+	}
+	
+	public boolean isLongerThan(BlockChain another) {
+		return this.length() > another.length();
 	}
 }
